Added sign up, edit and delete  user functionality and fixed map sticking out of its container

--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
@@ -1,43 +1,43 @@
 <mat-stepper #stepper>
   <mat-step>
-    <div id="main">
+    <div class="main">
       <h1>Nombre del centro</h1>
-      <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
+      <p class="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
 
-      <div id="app-map">
+      <div class="app-map">
         <app-map></app-map>
       </div>
 
-      <div id="arrive-button">
+      <div class="arrive-button">
         <button>Abrir en maps</button>
       </div>
-      <div id="buttons">
+      <div class="buttons">
         <button> Anterior</button>
         <button> Siguiente</button>
       </div>
 
-      <p id="finish">Terminar jornada laboral</p>
+      <p class="finish">Terminar jornada laboral</p>
     </div>
   </mat-step>
 
   <mat-step>
-    <div id="main">
+    <div class="main">
       <h1>Nombre del centro</h1>
       <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
 
-      <div id="app-map">
-        <app-map></app-map>
+      <div class="app-map">
+        <!--<app-map></app-map>-->
       </div>
 
-      <div id="arrive-button">
+      <div class="arrive-button">
         <button>Abrir en maps</button>
       </div>
-      <div id="buttons">
+      <div class="buttons">
         <button> Anterior</button>
         <button> Siguiente</button>
       </div>
 
-      <p id="finish">Terminar jornada laboral</p>
+      <p class="finish">Terminar jornada laboral</p>
     </div>
 
   </mat-step>
