--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.css
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.css
@@ -14,13 +14,13 @@ map-stepper map-step{
   background-color: #F4F2EF;
 }
 
-#main{
+.main{
   width: 90vw;
   height: 100%;
   margin: 0 auto 0 auto;
 }
 
-#arrive-text{
+.arrive-text{
   border: 2px solid #373737;
   padding: 1vh 1vw;
   border-radius: 10px;
@@ -30,19 +30,19 @@ h1{
   margin: 2vh auto auto 0;
 }
 
-#app-map{
+.app-map{
   border: 2px solid #373737;
   height: 45vh;
   border-radius: 20px;
 }
 
-#arrive-button{
+.arrive-button{
   width: 50%;
   margin: 1% auto;
   display: flex;
 }
 
-#arrive-button button{
+.arrive-button button{
   margin: auto;
   width: 71%;
   background-color: transparent;
@@ -51,19 +51,19 @@ h1{
   padding: 1vh 1vw;
 }
 
-#buttons{
+.buttons{
   margin: 2vh auto;
   display: flex;
   justify-content: space-between;
 }
-#buttons button{
+.buttons button{
   background-color: #7596F5;
   padding: 1vh 6vw;
   border: 2px solid #373737;
   border-radius: 12px;
 }
 
-#finish{
+.finish{
   width: 35%;
   background-color: #F57E7A;
   text-align: center;
