--- a/src/app/teacher-router/pages/center-manager/center-manager.component.html
+++ b/src/app/teacher-router/pages/center-manager/center-manager.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div id="content">
   <div class="centers-list-container">
 
@@ -58,3 +59,5 @@
   </div>
 
 </div>
+
+<app-footer></app-footer>
