--- a/src/app/teacher-router/pages/items-manager/items-manager.component.html
+++ b/src/app/teacher-router/pages/items-manager/items-manager.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div id="content">
 
   <div class="material-list-container">
@@ -71,3 +72,5 @@
     </div>
   </div>
 </div>
+
+<app-footer></app-footer>
