--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <mat-stepper #stepper>
   <mat-step>
     <div class="main">
@@ -26,7 +27,7 @@
       <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
 
       <div class="app-map">
-        <!--<app-map></app-map>-->
+        <app-map></app-map>
       </div>
 
       <div class="arrive-button">
@@ -54,3 +55,4 @@
 
   </mat-step>
 </mat-stepper>
+<app-footer></app-footer>
