--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.css
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.css
@@ -1,85 +1,119 @@
-map-steppper{
+map-steppper {
   width: 100vw;
-  padding:0;
-
+  padding: 0;
 }
 
-map-stepper map-step{
+map-stepper map-step {
   width: 95vw;
   padding: 0;
 }
 
 :host ::ng-deep .mat-horizontal-content-container {
-  padding:0 !important;
-  background-color: #F4F2EF;
+  padding: 0 !important;
+  background-color: #d9edf7;
 }
 
-.main{
+.main {
   width: 90vw;
   height: 100%;
   margin: 0 auto 0 auto;
 }
 
-.arrive-text{
+.arrive-text {
   border: 2px solid #373737;
   padding: 1vh 1vw;
   border-radius: 10px;
 }
-h1{
+h1 {
   text-align: center;
-  margin: 2vh auto auto 0;
+  margin: 1vh auto 1vh 0;
 }
 
-.app-map{
+.app-map {
   border: 2px solid #373737;
-  height: 45vh;
+  height: 42vh;
   border-radius: 20px;
 }
 
-.arrive-button{
+.arrive-button {
   width: 50%;
   margin: 1% auto;
   display: flex;
 }
 
-.arrive-button button{
-  margin: auto;
-  width: 71%;
+.arrive-button button {
+  width: 40%;
+  margin: 0 auto;
   background-color: transparent;
   border: 2px solid #373737;
   border-radius: 8px;
   padding: 1vh 1vw;
 }
 
-.buttons{
-  margin: 2vh auto;
+.buttons {
+  margin: 0;
   display: flex;
   justify-content: space-between;
 }
-.buttons button{
-  background-color: #7596F5;
-  padding: 1vh 6vw;
+
+.buttons button {
+  background-color: #7596f5;
   border: 2px solid #373737;
   border-radius: 12px;
+  padding: 1vh 2vw;
 }
 
-.finish{
-  width: 35%;
-  background-color: #F57E7A;
+.finish {
+  width: 20%;
+  background-color: #f57e7a;
   text-align: center;
-  margin: 2vh auto 0 auto;
+  margin: 1vh auto 1vh auto;
   padding: 1.5vh 0;
   border: 2px solid #373737;
   border-radius: 10px;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 1024px) {
+  .arrive-button {
+    width: 50%;
+    margin: 1% auto;
+    display: flex;
+  }
 
-  #arrive-button button{
+  .arrive-button button {
+    margin: auto;
+    width: 71%;
+    background-color: transparent;
+    border: 2px solid #373737;
+    border-radius: 8px;
+    padding: 1vh 1vw;
+  }
+
+  .buttons {
+    margin: 2vh auto;
+    display: flex;
+    justify-content: space-between;
+  }
+  .buttons button {
+    background-color: #7596f5;
+    padding: 1vh 6vw;
+    border: 2px solid #373737;
+    border-radius: 12px;
+  }
+  .finish {
+    width: 35%;
+    background-color: #f57e7a;
+    text-align: center;
+    margin: 2vh auto 0 auto;
+    padding: 1.5vh 0;
+    border: 2px solid #373737;
+    border-radius: 10px;
+  }
+
+  #arrive-button button {
     width: 100%;
   }
-  #finish{
+  #finish {
     width: 60%;
   }
-
 }
