fixing sintaxis bug

--- a/src/app/teacher-router/pages/route-manager/route-manager.component.html
+++ b/src/app/teacher-router/pages/route-manager/route-manager.component.html
@@ -2,6 +2,7 @@
 
 <div class="menu-container">
     <mat-form-field appearance="outline" class="full-width">
+    </mat-form-field>
     <button mat-raised-button color="blue" type="submit">Buscar</button>
 </div>
 
