--- a/src/app/teacher-router/pages/center-manager/center-manager.component.html
+++ b/src/app/teacher-router/pages/center-manager/center-manager.component.html
@@ -2,9 +2,7 @@
 <div id="content">
   <div class="centers-list-container">
 
-    <mat-form-field>
-      <input matInput [formControl]="searchControl" placeholder="Buscar centro..." class="search">
-    </mat-form-field>
+    <input [formControl]="searchControl" placeholder="Buscar centro..." class="search">
 
     <mat-radio-group class="centers-list" [(ngModel)]="selectedCenter">
 
