fixing logo link to main page

--- a/src/app/teacher-router/components/header/header.component.html
+++ b/src/app/teacher-router/components/header/header.component.html
@@ -2,7 +2,7 @@
 
   <div id="header_elements">
 
-    <a href=""> <img src="../../../../assets/images/Logo.png" alt="" title="Home"></a>
+    <a routerLink="/main"> <img src="../../../../assets/images/Logo.png" alt="" title="Home"></a>
 
     <div id="login">
 
@@ -24,7 +24,7 @@
     <div id="teacher_elements">
 
 
-      <a href=""> <img src="../../../../assets/images/Logo.png" alt="" title="Home"></a>
+      <a routerLink="/main"> <img src="../../../../assets/images/Logo.png" alt="" title="Home"></a>
 
       <a routerLink="/main/teacher-home" class="text">Mi trabajo</a>
 
