--- a/src/app/teacher-router/pages/user-manager/user-manager.component.html
+++ b/src/app/teacher-router/pages/user-manager/user-manager.component.html
@@ -14,8 +14,8 @@
       </ng-container>
 
       <ng-container matColumnDef="isAdmin">
-        <th mat-header-cell *matHeaderCellDef class="header-cell"> Admin </th>
-        <td mat-cell *matCellDef="let user"> {{user.isAdmin}} </td>
+        <th mat-header-cell *matHeaderCellDef class="header-cell"> Rol </th>
+        <td mat-cell *matCellDef="let user"> {{user.isAdmin ? "Administrador" : "Profesor"}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-cell"></tr>
