Servicio de ruta

--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
@@ -35,7 +35,7 @@
       </div>
       <div class="buttons">
         <button> Anterior</button>
-        <button> Siguiente</button>
+        <button (click)="updateVisited()"> Siguiente</button>
       </div>
 
       <p class="finish">Terminar jornada laboral</p>
