--- a/src/app/teacher-router/components/add-user-dialog/add-user-dialog.component.html
+++ b/src/app/teacher-router/components/add-user-dialog/add-user-dialog.component.html
@@ -22,7 +22,7 @@
       </button>
     </mat-form-field>
 
-    <mat-slide-toggle class="form-field">Administrador</mat-slide-toggle>
+    <mat-slide-toggle class="form-field" (change)="toggleAdmin()">Administrador</mat-slide-toggle>
 
   </form>
 </div>
