--- a/src/app/teacher-router/pages/user-manager/user-manager.component.html
+++ b/src/app/teacher-router/pages/user-manager/user-manager.component.html
@@ -9,13 +9,18 @@
     <table mat-table [dataSource]="dataSource" class="mat-table">
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef class="header-cell"> Name </th>
+        <th mat-header-cell *matHeaderCellDef class="header-cell"> Nombre </th>
         <td mat-cell *matCellDef="let user"> {{user.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="isAdmin">
         <th mat-header-cell *matHeaderCellDef class="header-cell"> Rol </th>
         <td mat-cell *matCellDef="let user"> {{user.isAdmin ? "Administrador" : "Profesor"}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="startAddress">
+        <th mat-header-cell *matHeaderCellDef class="header-cell"> Dirección inicial </th>
+        <td mat-cell *matCellDef="let user"> {{user.startAddress}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-cell"></tr>
@@ -37,7 +42,7 @@
     <mat-slide-toggle id="admin-slide" color="primary" [(ngModel)]="role" [disabled]="isUserDeleted">Administrador</mat-slide-toggle>
 
     <div id="day-button-container">
-      <div *ngFor="let day of days">
+      <div *ngFor="let day of selectedRow.days">
         <button class="day-button" [ngClass]="{'selected': day.selected}" (click)="toggleDay(day)" [disabled]="isUserDeleted">{{day.name}}</button>
       </div>
     </div>
