Implemented getUsersData in Admin Home

--- a/src/app/teacher-router/components/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/teacher-router/components/admin-sidenav/admin-sidenav.component.html
@@ -11,15 +11,15 @@
     </mat-autocomplete>
 
     <div *ngIf="selectedUser">
-      <h2 class="field-name">Nombre</h2>
-      <p>&nbsp;&nbsp;{{selectedUser!.name}}</p>
-      <h2 class="field-name">Email</h2>
-      <p>&nbsp;&nbsp;{{selectedUser!.email}}</p>
-      <h2 class="field-name">ID</h2>
-      <p>&nbsp;&nbsp;ID: {{selectedUser!.id}}</p>
-      <h2 class="field-name">Días de trabajo</h2>
+      <h2 class="field-name">&nbsp;Nombre</h2>
+      <p>&nbsp;&nbsp;&nbsp;{{selectedUser.name}}</p>
+      <h2 class="field-name">&nbsp;Rol</h2>
+      <p>&nbsp;&nbsp;&nbsp;{{selectedUser.isAdmin ? "Administrador" : "Profesor"}}</p>
+      <h2 class="field-name">&nbsp;Dirección inicial</h2>
+      <p>&nbsp;&nbsp; {{selectedUser.startAddress}}</p>
+      <h2 class="field-name">&nbsp;Días de trabajo</h2>
       <div id="day-button-container">
-        <div *ngFor="let day of days">
+        <div *ngFor="let day of selectedUser.days">
           <button class="day-button" [ngClass]="{'selected': day.selected}" (click)="toggleDay(day)">{{day.name}}</button>
         </div>
       </div>
