--- a/src/app/teacher-router/components/change-password-dialog/change-password-dialog.component.html
+++ b/src/app/teacher-router/components/change-password-dialog/change-password-dialog.component.html
@@ -19,5 +19,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button [mat-dialog-close]="changePasswordForm.value" cdkFocusInitial>Guardar</button>
+  <button mat-button [mat-dialog-close]="changePasswordForm.value" [disabled]="saveDisabled" cdkFocusInitial>Guardar</button>
 </div>
