--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<mat-stepper #stepper>
+<mat-stepper #stepper *ngFor="let centre of centres">
   <mat-step>
     <div class="main">
-      <h1>Nombre del centro</h1>
-      <p class="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
+      <h1>{{centre.centreName}}</h1>
+      <p class="arrive-text">{{centre.street}}</p>
 
       <div class="app-map">
         <app-map></app-map>
@@ -13,46 +13,12 @@
         <button>Abrir en maps</button>
       </div>
       <div class="buttons">
-        <button> Anterior</button>
-        <button> Siguiente</button>
+        <button (click)="previousCentre()"> Anterior</button>
+        <button (click)="nextCentre()"> Siguiente</button>
       </div>
 
       <p class="finish">Terminar jornada laboral</p>
     </div>
-  </mat-step>
-
-  <mat-step>
-    <div class="main">
-      <h1>Nombre del centro</h1>
-      <p id="arrive-text">Avda Aleatoria nº 20, 35424, Las Palmas</p>
-
-      <div class="app-map">
-        <app-map></app-map>
-      </div>
-
-      <div class="arrive-button">
-        <button>Abrir en maps</button>
-      </div>
-      <div class="buttons">
-        <button> Anterior</button>
-        <button (click)="updateVisited()"> Siguiente</button>
-      </div>
-
-      <p class="finish">Terminar jornada laboral</p>
-    </div>
-
-  </mat-step>
-
-  <mat-step>
-
-  </mat-step>
-
-  <mat-step>
-
-  </mat-step>
-
-  <mat-step>
-
   </mat-step>
 </mat-stepper>
 <app-footer></app-footer>
