Mapa: datos actualizados para mostrar calle

--- a/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
+++ b/src/app/teacher-router/pages/teacher-home/teacher-home.component.html
@@ -3,7 +3,7 @@
   <mat-step  *ngFor="let centre of centres">
     <div class="main">
       <h1>{{centre.centername}}</h1>
-      <p class="arrive-text">{{centre?.calle}}</p>
+      <p class="arrive-text">{{centre?.direction}}</p>
     </div>
   </mat-step>
 </mat-stepper>
