--- a/src/app/teacher-router/pages/items-manager/items-manager.component.html
+++ b/src/app/teacher-router/pages/items-manager/items-manager.component.html
@@ -13,7 +13,11 @@
         </mat-list-option>
       </mat-selection-list>
 
+
     </div>
+    <button [disabled]="!getLastMaterial().name" (click)="resetSelected()" class="delete">
+      Borrar selección
+    </button>
 
   </div>
 
