asignar rutas a usuario finalizada

--- a/src/app/teacher-router/pages/route-manager/route-manager.component.css
+++ b/src/app/teacher-router/pages/route-manager/route-manager.component.css
@@ -12,3 +12,21 @@
 .full-width {
     width: 100%;
 }
+
+.container {
+    min-height: 100vh;
+    min-width: 100vw;
+    
+}
+
+.responsive {
+    min-height: 100vh;
+    min-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grupos {
+    min-width: 400px;
+}
