update design front-end

--- a/src/app/teacher-router/pages/admin-home/admin-home.component.html
+++ b/src/app/teacher-router/pages/admin-home/admin-home.component.html
@@ -24,6 +24,7 @@
       <button class="buttons" (click)="goToPage('user-manager')">Usuarios</button>
       <button class="buttons" (click)="goToPage('center-manager')">Centros</button>
       <button class="buttons" (click)="goToPage('items-manager')">Materiales</button>
+      <button class="buttons" (click)="goToPage('route-manager')">Gestionar Rutas</button>
     </div>
   </div>
 </div>
