--- a/src/app/teacher-router/pages/route-manager/route-manager.component.css
+++ b/src/app/teacher-router/pages/route-manager/route-manager.component.css
@@ -16,17 +16,17 @@
 .container {
     min-height: 100vh;
     min-width: 100vw;
-    
-}
-
-.responsive {
-    min-height: 100vh;
-    min-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .grupos {
     min-width: 400px;
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
